Comenta elementos a eliminar

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,14 @@
       <a href="#home" class="active">Home</a>
 
       <div class="dropShop">
-        <button class="shopBtn"> Tiendas 
+        <button class="shopBtn"> Tiendas
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-shop">
-          <a href= "https://www.facebook.com/pmaestra/">Planta Maestra</a>
-          <a href= "https://www.lacasadelvegan.cl/">La Casa del Vegan</a>
+          <a href = "https://www.facebook.com/pmaestra/">Planta Maestra</a>
+          <a href = "https://www.lacasadelvegan.cl/">La Casa del Vegan</a>
         </div>
-      </div> 
+      </div>
 
 
       <div class="dropBar">
@@ -31,8 +31,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-bar">
-          <a href="https://www.facebook.com/pepperland.bar/">Pepperland Bar</a>
-          <a href="https://www.facebook.com/Barelchanchoseis/">El Chancho Seis Bar</a>
+          <a href = "https://www.facebook.com/pepperland.bar/">Pepperland Bar</a>
+          <a href = "https://www.facebook.com/Barelchanchoseis/">El Chancho Seis Bar</a>
         </div>
       </div>
 
@@ -41,9 +41,9 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-makeUp">
-          <a href="https://www.facebook.com/KuyenRayen/">Kuyen Rayen</a>
-          <a href="https://www.facebook.com/Verde.cosmetica">Verde Cosmética</a>
-          <a href="https://www.facebook.com/vgcosmetics.cl/?eid=ARBfhqOc-Ss3-axF-iHEjy26mX6z-o7E86_4GZXCcaSBZKkJWvNTVqm9EDIGaoO2jENcJ0fD8e_8R-Zo">Vegan Cosmetics</a>
+          <a href = "https://www.facebook.com/KuyenRayen/">Kuyen Rayen</a>
+          <a href = "https://www.facebook.com/Verde.cosmetica">Verde Cosmética</a>
+          <a href = "https://www.facebook.com/vgcosmetics.cl/?eid=ARBfhqOc-Ss3-axF-iHEjy26mX6z-o7E86_4GZXCcaSBZKkJWvNTVqm9EDIGaoO2jENcJ0fD8e_8R-Zo">Vegan Cosmetics</a>
         </div>
       </div>
 
@@ -52,35 +52,35 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-footwear">
-          <a href="https://www.facebook.com/VerdeVidavegan/?eid=ARApeCq6JgYAkT1V9VaC1K77SRfI4rjp1ImaO7SgHmamlJzFssA4tTWVVpuLmw8sp4xIuF154QGAFfUo">Verde Vida </a>
-          <a href="https://www.facebook.com/Vegan-Boots-Chile-378361735969861/">Vegan Boots Chile</a>
+          <a href = "https://www.facebook.com/VerdeVidavegan/?eid=ARApeCq6JgYAkT1V9VaC1K77SRfI4rjp1ImaO7SgHmamlJzFssA4tTWVVpuLmw8sp4xIuF154QGAFfUo">Verde Vida </a>
+          <a href = "https://www.facebook.com/Vegan-Boots-Chile-378361735969861/">Vegan Boots Chile</a>
 
         </div>
       </div>
 
       <div class="dropArticle">
-        <button class="articleBtn"> Articulos 
+        <button class="articleBtn"> Articulos
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-article ">
-          <a href="https://www.petalatino.com/blog/nuevo-estudio-sugiere-que-si-todos-fueramos-veganos-podriamos-salvar-8-millones-de-vidas-humanas-al-ano/">Peta Latino</a>
-          <a href="https://www.igualdadanimal.org/noticias">Igualdad Animal</a>
+          <a href = "https://www.petalatino.com/blog/nuevo-estudio-sugiere-que-si-todos-fueramos-veganos-podriamos-salvar-8-millones-de-vidas-humanas-al-ano/">Peta Latino</a>
+          <a href = "https://www.igualdadanimal.org/noticias">Igualdad Animal</a>
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn"> Restaurantes 
+        <button class="dropbtn"> Restaurantes
         </button>
         <div class="dropdown-content">
-          <a href="https://www.facebook.com/vegandealer/"> Vegan Dealer </a>
-          <a href="https://www.facebook.com/Alfajoreriavegana/">Alfajoreria Vegana</a>
-          <a href="https://www.facebook.com/labodeguitaverde7/"> La Bodeguita Verde</a>
+          <a href = "https://www.facebook.com/vegandealer/"> Vegan Dealer </a>
+          <a href = "https://www.facebook.com/Alfajoreriavegana/">Alfajoreria Vegana</a>
+          <a href = "https://www.facebook.com/labodeguitaverde7/"> La Bodeguita Verde</a>
           <a href = "https://www.facebook.com/leerteteteria/">LeerTetetería</a>
-          <a href =  "https://www.facebook.com/VeganBunker/">VeganBunker</a>
-          <a href= "https://www.facebook.com/Emporio-Vegetal-306089922890184/">Emporio Vegetal</a>
-          <a href= "https://www.facebook.com/Restaurant-Soju-Vegetariano-427180647341017/">Restaurant Soju</a>
-          <a href= "https://www.facebook.com/manativegetariano/">Sanguchería Manati</a>
-          <a href= "https://www.facebook.com/SuculentaSangucheriaVegana/">Suculenta Sangucheria Vegana</a>
+          <a href = "https://www.facebook.com/VeganBunker/">VeganBunker</a>
+          <a href = "https://www.facebook.com/Emporio-Vegetal-306089922890184/">Emporio Vegetal</a>
+          <a href = "https://www.facebook.com/Restaurant-Soju-Vegetariano-427180647341017/">Restaurant Soju</a>
+          <a href = "https://www.facebook.com/manativegetariano/">Sanguchería Manati</a>
+          <a href = "https://www.facebook.com/SuculentaSangucheriaVegana/">Suculenta Sangucheria Vegana</a>
         </div>
       </div>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -96,7 +96,7 @@
       }
     }
     </script>
-<div id="perfilUser" class="buttonUsers" style="display :none"><li><button id="callPerfil">Perfil Usuario</button></li></div> 
+<div id="perfilUser" class="buttonUsers" style="display :none"><li><button id="callPerfil">Perfil Usuario</button></li></div>
 </ul>
 </div>
 <div id="userLogin" style="display: block" class="divlogin"><!--se crea para mostrar el login-->
@@ -185,7 +185,7 @@
  <div id="userWallPerfil" style="display: none" ><!--se crea para mostrar el muro-->
   <div class="divMuroPerfil">
     <!--Creando perfil de usuario-->
-  <!--div que contiene comandos para editar si el usuario lo desea-->   
+  <!--div que contiene comandos para editar si el usuario lo desea-->
  <div id="divPerfil" style="display: block" >
   <div>
     <div class="divPerfilAjust">
@@ -195,7 +195,7 @@
         <h4>Editar perfil<img src="imagenes/edit.jpeg" id="edit" class="imgEdit" ></h4>
     </div>
     <div class="divPerfilAjust">
-        <img id="imagenPerfil" class="imgResponsive"><p></p> 
+        <img id="imagenPerfil" class="imgResponsive"><p></p>
     </div>
     <div class="divPerfilAjust">
         <form id="formMessagePerfil" class="divHeaderModal"><p></p>
@@ -205,7 +205,7 @@
           </form><p></p>
     </div>
   </div>
-  </div> 
+  </div>
   <p></p>
   <div>
     <div>
@@ -218,17 +218,19 @@
 </div>
   <p></p>
 <div id="messagePerfil"></div>
- </div><p></p> 
+ </div><p></p>
  <div id="divEdition" style="display: none" class="divlogin">
     <h2>Actualización de datos</h2><p></p>
   <input id="nameEdit" type="name" placeholder="Ingresa Nombre" class="inputUserLogin"> <br> <br>
   <input id="mailEdit" type="mail" placeholder="Ingresa correo" class="inputUserLogin"> <br> <br>
   <input type="file" id="imagEdit" name="file" accept="image/png, image/jpeg" class="inputUserLogin"><br> <br><!--boton para subir imagen, type=fyle-->
-  <button id="updateEdit" class="inputUserLogin"> Actualizar </button>        
+  <button id="updateEdit" class="inputUserLogin"> Actualizar </button>
 </div>
+
+
  <!-- RECETAS -->
 
-
+<!--
 <div id="recetas" style="display:none">
  <div class="recetasEstilo">
   <input type="button" class="inputloginPerfil" id="returnButton" value="Volver">
@@ -258,9 +260,11 @@
         </div>
     </form>
   </div>
-</div>
+</div> -->
 
   <!-- Fin perfil usuario -->
+
+  <!--
 <div id="tablaNut" style="display: none">
       <div class="divMuro">
           <input type="button" class="inputloginPerfil" id="returnButton" value="Volver">
@@ -348,11 +352,13 @@
       </tr>
     </table>
   <p></p>
-    <input type="button" value="Calcular" id="calcTable" class="inputlogin"><label id="total"> Total :</label> 
+    <input type="button" value="Calcular" id="calcTable" class="inputlogin"><label id="total"> Total :</label>
    </div>
-  </div>
+  </div> -->
+
+
    <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-       
+
        <script src="./js/mainMolu.js" type="module"></script>
        <script src="./js/data.js"></script>
 
