--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div id="perfilUser" class="buttonUsers" style="display :none">
     <li><button id="callPerfil">Perfil Usuario</button></li>
   </div>
-  </ul>
-  </div>
+  <!-- </ul> -->
+  <!-- </div> -->
   <div id="userLogin" style="display: block" class="divlogin">
     <!--se crea para mostrar el login-->
     <h2>Ingreso de Usuarios</h2>
