--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style/styleMarce.css">
-  <link rel="stylesheet" href="./style/stylesMolu.css">
+  <link rel="stylesheet" href="./style/styleWall.css">
+  <link rel="stylesheet" href="./style/styleLogin.css">
+  <link rel="shortcut icon" href=""> 
   <title>Social Vegan</title>
   <meta charset="utf-8">
 </head>
@@ -59,7 +60,6 @@
           href="https://www.facebook.com/VerdeVidavegan/?eid=ARApeCq6JgYAkT1V9VaC1K77SRfI4rjp1ImaO7SgHmamlJzFssA4tTWVVpuLmw8sp4xIuF154QGAFfUo">Verde
           Vida </a>
         <a href="https://www.facebook.com/Vegan-Boots-Chile-378361735969861/">Vegan Boots Chile</a>
-
       </div>
     </div>
 
@@ -90,22 +90,25 @@
         <a href="https://www.facebook.com/SuculentaSangucheriaVegana/">Suculenta Sangucheria Vegana</a>
       </div>
     </div>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()"  id="menu" >&#9776;</a>
+    <!-- <a href="javascript:void(0);" style="font-size:15px;" class="icon"  id="menu" >&#9776;</a> -->
+
   </div>
 
 
 
   <!-- MOVER ESTO A UN ARCHIVO .JS -->
-  <script>
-    function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
-    }
-  </script>
+   <script>
+     function myFunction() {
+       var x = document.getElementById("myTopnav");
+       if (x.className === "topnav") {
+         x.className += " responsive";
+       } else {
+         x.className = "topnav";
+       }
+     }
+   </script>
+
   <!-- FIN MOVER -->
 
 
@@ -114,8 +117,7 @@
   <div id="perfilUser" class="buttonUsers" style="display :none">
     <li><button id="callPerfil">Perfil Usuario</button></li>
   </div>
-  </ul>
-  </div>
+
   <div id="userLogin" style="display: block" class="divlogin">
     <!--se crea para mostrar el login-->
     <h2>Ingreso de Usuarios</h2>
@@ -142,6 +144,8 @@
     <input id="password" type="password" placeholder="Ingresa contraseña" class="inputUserLogin"><br> <br>
     <button id="signIn" class="inputlogin"> Registrarse </button>
   </div>
+
+<!-- ESPACIO PARA BOTON SALIR -->
   <div id="contenido">
   </div>
   <br>
@@ -171,12 +175,12 @@
 
 
   <!--Inicio modal para agregar un comentario-->
-  <div id="myModal" class="modal" > //moví a css "style="display: none""
+  <div id="myModal" class="modal"> //moví a css "style="display: none""
     <!-- Modal content -->
     <div class="modal-content">
       <div class="cerrarModal"><input type="button" value="X" id="cerrarModal"></div>
       <div class="divMuro">
-        <p class="divHeaderModal">Nombre   : <label id="nameResponse"></label></p>
+        <p class="divHeaderModal">Nombre : <label id="nameResponse"></label></p>
         <p class="divHeaderModal"> Mensaje : <textarea id="mesageResponse"></textarea></p>
         <p><input type="button" value="Enviar" id="btnModal" class="inputlogin"></p>
       </div>
@@ -186,12 +190,12 @@
 
 
   <!--Inicio modal de editar padre-->
-  <div id="modalEdit" class="modal"> //moví a css "style="display: none""
+  <div id="modalEdit" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <div class="cerrarModal"><input type="button" value="X" id="cerrarModalEdit"></div>
       <div class="divMuro">
-        <p class="divHeaderModal">Nombre   : <label    id="nameResponseEdit"></label></p>
+        <p class="divHeaderModal">Nombre : <label id="nameResponseEdit"></label></p>
         <p class="divHeaderModal"> Mensaje : <textarea id="mesageResponseEdit"></textarea></p>
         <p><input type="button" value="Enviar" id="btnModalEdit" class="inputlogin"></p>
       </div>
@@ -215,7 +219,6 @@
 
 
   <!--Creando perfil de usuario-->
-
   <div id="userWallPerfil" style="display: none">
     <!--se crea para mostrar el muro-->
     <div class="divMuroPerfil">
@@ -246,20 +249,28 @@
           </div>
         </div>
       </div>
+
+
       <p></p>
+
+    <!-- VER SI VALE LA PENA AGREGAR LA FUNCIONALIDAD DE SUBIR RECETAS, SINO BORRAR -->
       <div>
         <div>
 
           <!--boton tabla nutricional-->
           <!-- <input type="button" class="inputloginPerfil" id="tableNut" value="Tabla Nutricional">
-      <input type="button" class="inputloginPerfil" id="recetasVeg"  value="Recetas"> -->
+          <input type="button" class="inputloginPerfil" id="recetasVeg"  value="Recetas"> -->
         </div>
-        <div></div>
+        <!-- <div></div> -->
       </div>
     </div>
+
+
     <p></p>
-    <div id="messagePerfil"></div>
+    <div id="messagePerfil">
+    </div>
   </div>
+
   <p></p>
 
 
@@ -277,7 +288,7 @@
 
 
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-  <script src="./js/mainMolu.js" type="module"></script>
+  <script src="./js/login.js" type="module"></script>
   <script src="./js/data.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </body>
