--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
 
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
     <script src="./js/login.js" type="module"></script>
-    <script src="./js/data.js"></script>
+    <script src="./js/data.js" type="module"></script>
+    <script src="./js/functions.js" type="module"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   </div>
