Elimina código comentado

--- a/src/index.html
+++ b/src/index.html
@@ -108,12 +108,6 @@
   </div>
 
 
-  <!-- BOTON ORIGINAL CALLPERFIL -->
-  <!-- <div id="perfilUser" class="buttonUsers" style="display :none">
-    <li><button id="callPerfil">Perfil Usuario</button></li>
-  </div> -->
-
-
   <div id="userLogin" class="divlogin">
     <!--se crea para mostrar el login-->
     <h2>Ingreso de Usuarios</h2>
@@ -268,8 +262,8 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-    <script src="./js/login.js" type="module"></script>
-    <script src="./js/data.js" type="module"></script>
+    <script src="./js/login.js" ></script>
+    <script src="./js/data.js" ></script>
     <script src="./js/functions.js" type="module"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
